# Measure_creativity_LLM

./: .gitattributes  .gitignore  Googledoc_repartition.txt  README.md  download_dataset.py  etude_cas_creativite_LLM_v2.docx  pyproject.toml  ~$ude_cas_creativite_LLM_v2.docx
Biais_systématiques_dans_les_données/: Protocole_annotation_ameliore.docx  biais_de_longueur.ipynb  biais_de_position.ipynb
Classement_par_modèle_Bradley-Terry/: Bradley-Terry.ipynb  raphael.ipynb  transitivité_stochastique.ipynb
Fiabilité_des_jugements_humains/: accord_sur_le_signal_creative.ipynb  biais_selection_votants.ipynb
Validité de construction/: brouillon_proposition_de_reponse.txt  proposition_de_reponse.txt  proposition_de_réponse.md
